@@ -1,3 +1,8 @@
+2011-08-18  6.7.1-8 Glenn Randers-Pehrson <glennrp@image...>
+  * The PNG encoder would sometimes fail to respect the -define PNG:color-type
+  option when the incoming image was PseudoClass (reference
+http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19262).
+
 2011-08-15  6.7.1-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.1-7.
 
